fix: add visibity params to header user component

--- a/src/pages/Product/Product.module.scss
+++ b/src/pages/Product/Product.module.scss
@@ -1,3 +1,11 @@
+.main {
+  padding-top: 48px;
+
+  @media (max-width: (450px)) {
+    padding-top: 24px;
+  }
+}
+
 .product {
   &__left {
     grid-column: 8 span;
